updated on 25 dec

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,6 @@
     "app/start-business/page.jsx",
     "components/dashboard/dashboard-overview.jsx",
     "components/admin/admin-overview.jsx"
-, "app/layout.jsx", "app/page.jsx", "app/dashboard/documents/page.jsx", "app/services/registered-agent/page.jsx", "components/pricing-section.jsx", "app/admin/businesses/page.jsx", "components/admin/users-management.jsx", "app/admin/users/page.jsx"  ],
+, "app/layout.jsx", "app/page.jsx", "app/dashboard/documents/page.jsx", "app/services/registered-agent/page.jsx", "components/pricing-section.jsx", "app/admin/businesses/page.jsx", "components/admin/users-management.jsx", "app/admin/users/page.jsx", "app/about/page.jsx", "components/hero-section.tsx", "components/services-section.tsx"  ],
   "exclude": ["node_modules"]
 }
