--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -51,7 +52,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.23.26",
+    "motion": "^12.24.10",
     "next": "15.2.8",
     "next-themes": "^0.4.6",
     "react": "^19",
