--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-three/fiber": "^10.0.0-alpha.0",
     "@supabase/supabase-js": "^2.57.4",
     "@vercel/analytics": "1.3.1",
     "axios": "^1.12.2",
@@ -52,7 +53,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.24.10",
+    "motion": "^12.26.2",
     "next": "15.2.8",
     "next-themes": "^0.4.6",
     "react": "^19",
@@ -66,8 +67,9 @@
     "resend": "^6.4.1",
     "sonner": "^1.7.4",
     "stripe": "^19.1.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "toast": "^0.5.4",
     "toaster": "^0.1.2",
     "vaul": "^1.1.2",
@@ -78,6 +80,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "supabase": "^2.40.7",
