--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@react-three/fiber": "^10.0.0-alpha.0",
+    "@react-three/fiber": "^8.15.12",
     "@supabase/supabase-js": "^2.57.4",
     "@vercel/analytics": "1.3.1",
     "axios": "^1.12.2",
